# opencode-helper

./: .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  README.md  README_zh.md  TODO.md  _check_user_parts.py  main.py  pyproject.toml  session_graph.json  settings.jsonc  utilities.py
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: smoke.yml
analysis/: __init__.py  common.py  harness.py  mcp.py  models.py  skills.py  tools.py
analysis/prompts/: harness.md  mcp_analysis.md  mcp_error_diagnosis.md  models.md  optimization_advice.md  session_quality.md  skill_compatibility.md  skills.md  tool_efficiency.md
cleanup/: __init__.py  session.py  tempfile.py
drilldown/: __init__.py  cli.py  graph.py  render.py  storage.py
tests/: __init__.py  test_analysis_common.py  test_compression.py  test_utilities.py
