[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "opencode-helper"
version = "1.0.0"
description = "Extend OpenCode beyond official capabilities — cleanup, analysis, and optimization tools"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "shawn", email = "shawn@example.com"},
]
keywords = ["opencode", "cli", "cleanup", "analysis"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Utilities",
]

[project.scripts]
och = "main:main"

[tool.setuptools]
py-modules = ["utilities", "main"]

[tool.setuptools.packages.find]
include = ["analysis*", "cleanup*"]
